ready for push / bugs squashed

--- a/PROJECT_DIR/static/css/project/AutoComplete/_auto-complete.scss
+++ b/PROJECT_DIR/static/css/project/AutoComplete/_auto-complete.scss
@@ -2,8 +2,8 @@
   //max-width: 750px;
   margin: 0 auto;
   text-align: center;
-  padding-top: 15px;
-  padding-bottom: 20px;
+
+  height: 5rem;
 }
 
 .tt-menu,
